# learnselfcpp

./: README.md
CH1/10to2/: 10to2.cpp  README.txt
CH1/addlistofnumber/: README.txt  addlistofnumber.cpp
CH1/appearnum/: appearnum.cpp
CH1/asciiapear/: README.txt
CH1/dayformonth/: dayformonth.cpp
CH1/hailstone problem/: hailstone problem.cpp
CH1/largestandsecondlargestnumber/: largestandsecondlargestnumber.cpp
CH1/primefactorization/: primefactorization.cpp
CH1/raisetopower/: 2^n.cpp  README.txt
CH1/reversenumber/: README.txt  reversenumber.cpp
CH2/C(n,k)/: C(n,k).cpp  README.txt
CH2/Monte Carlo integration/: Monte Carlo integration.cpp
CH2/P(n,k)/: P(n,k).cpp
CH2/crap/: crap.cpp  random.cpp  random.h
CH2/direction library/: direction.cpp  direction.h
CH2/gmath/: gmath.cpp  gmath.h
CH2/nearint/: nearint.cpp
CH2/quadratic equation/: quadratic equation.cpp
CH2/random num/: random num.cpp
CH2/random rule/: random.cpp  random.h  randominit.cpp  randominit.h
CH3/basicstring/: basicstring.cpp
CH3/ispalindrome/: ispalindrome.cpp
CH3/piglatin/: piglatin.cpp
CH3/prefixsame/: prefixsame.cpp
CH3/repeatandreverse/: repeatandreverse.cpp
CH3/spacedisappear/: spacedisapper.cpp
CH4/couttxt/: couttxt.cpp
CH5/: youyiqi.txt
cppproject/: CMakeLists.txt  conanfile.txt
cppproject/include/: error.h  hello.h  stack.h
cppproject/src/CH1/10to2/: main.cpp
cppproject/src/CH1/caculatesimulator/: error.cpp  main.cpp  stack.h
cppproject/src/CH1/talorexp/: main.cpp
cppproject/src/hellotest/: hello.cpp  main.cpp
库存管理/: kucunguanli.cpp
(+17 files in other folders)
